--- a/weapp-1/pages/shop/order/order.wxml
+++ b/weapp-1/pages/shop/order/order.wxml
@@ -1,5 +1,5 @@
 <view wx:if="{{0}}">
-    <view class="dizhi">
+  <view class="dizhi">
     收货地址
   </view>
   <view class="isadd">
@@ -14,17 +14,36 @@
 </view>
 
 
-<view class="kd">
-<view class="kd_l">
-  <image src="/images/kd_logo.png" />
-</view>
+<view class="kd" wx:if="{{0}}">
+  <view class="kd_l">
+    <image src="/images/kd_logo.png" />
+  </view>
   <view class="kd_r">
     <view class="kd_tel">
-      <view>物流公司：<text>顺丰快递</text></view>
+      <view>物流公司：
+        <text>顺丰快递</text>
+      </view>
       <view bindtap="toExpress">查看物流 ></view>
     </view>
     <view>
-      物流单号：<text>2555666334588</text>
+      物流单号：
+      <text>2555666334588</text>
+    </view>
+  </view>
+</view>
+
+<view class="kd tk" wx:if="{{1}}">
+  <view class="kd_l">
+    <image src="/images/tk_logo.png" />
+  </view>
+  <view class="kd_r">
+    <view class="kd_tel">
+      <view>退款审核中
+      </view>
+      <view bindtap="toExpress">退款详情 ></view>
+    </view>
+    <view>
+      商家将会及时和您联系退款事宜
     </view>
   </view>
 </view>
@@ -45,50 +64,57 @@
 <view class="money t20">
   <view>
     <text>商品金额</text>
-    <text class="mn_num isnum" >￥1299.00</text>
+    <text class="mn_num isnum">￥1299.00</text>
   </view>
   <view>
     <text>红包抵扣</text>
-    <text class="mn_num" >-￥0.00</text>
+    <text class="mn_num">-￥0.00</text>
   </view>
   <view>
     <text>优惠券抵扣</text>
-    <text class="mn_num" >-￥0.00</text>
+    <text class="mn_num">-￥0.00</text>
   </view>
   <view>
     <text>应付</text>
-    <text class="mn_num" >￥1299.00</text>
+    <text class="mn_num">￥1299.00</text>
   </view>
   <view class="kefu_box">
-      <view class="lxkf">
-    <view class="kf_img">
-      <image src="/images/kefu.png" />
+    <view class="lxkf">
+      <view class="kf_img">
+        <image src="/images/kefu.png" />
+      </view>
+      <text>联系客服</text>
     </view>
-    <text>联系客服</text>
-  </view>
   </view>
 </view>
 
 <view class="order_info">
   <view>
-  <view>订单编号：2017880029001</view>
-  <view class="copy">复制</view>
-</view>
-<view>
-  <view>下单时间：2017.08.09 12:09:03</view>
-</view>
-<view>
+    <view>订单编号：2017880029001</view>
+    <view class="copy">复制</view>
+  </view>
   <view>
-  <text>订单状态：</text>
-  <text style="color:red"  wx:if="{{0}}">待付款</text> 
-  <text style="color:red">待收货</text> 
+    <view>下单时间：2017.08.09 12:09:03</view>
   </view>
-  <view bindtap="qux" wx:if="{{0}}">取消订单</view>
-</view>
-<view class="submit_btn jinse">
-    <text  wx:if="{{0}}">立即支付</text>
-    <text bindtap="confirm">确认收货</text>
+  <view>
+    <view>
+      <text>订单状态：</text>
+      <text style="color:red" wx:if="{{0}}">待付款</text>
+      <text style="color:red" wx:if="{{0}}">待收货</text>
+      <text style="color:red" wx:if="{{0}}">待评价</text>
+      <text style="color:red" wx:if="{{0}}">已完成</text>
+      <text style="color:red" wx:if="{{1}}">退款审核中</text>
+    </view>
+    <view bindtap="qux" wx:if="{{0}}">取消订单</view>
+    <view bindtap="qux" wx:if="{{1}}">取消退款</view>
+  </view>
+  <view class="submit_btn jinse" wx:if="{{0}}">
+    立即支付
+  </view>
+  <view class="submit_btn jinse" wx:if="{{0}}" bindtap="confirm">
+    确认收货
+  </view>
+  <view class="submit_btn jinse" wx:if="{{0}}" bindtap="discuss">
+    立即评价
   </view>
 </view>
-
-  
