--- a/weapp-1/app.wxss
+++ b/weapp-1/app.wxss
@@ -38,6 +38,9 @@ image {
 .jinse {
    background: linear-gradient(to right, RGBA(227, 211, 175, 1), RGBA(194, 179, 135, 1));
 }
+.jinse:hover {
+   background: linear-gradient(to right, RGBA(227, 211, 175, 1), RGBA(194, 179, 135, 1));
+}
 .icon{
     width: 22px;
     height: 22px;
