--- a/weapp-1/pages/cart/index.wxss
+++ b/weapp-1/pages/cart/index.wxss
@@ -1,15 +1,32 @@
+view {
+  box-sizing: border-box;
+}
+
+.title {
+  height: 80rpx;
+  line-height: 80rpx;
+  text-align: right;
+  font-size: 24rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(173, 155, 106, 1);
+  background-color: #fff;
+  padding-right: 24rpx;
+}
+
 .no_goods {
   display: flex;
-  align-items: center;/*垂直居中*/
-  justify-content: center;/*水平居中*/
+  align-items: center;
+  /*垂直居中*/
+  justify-content: center;
+  /*水平居中*/
   background-color: #F2f2f2;
   color: #939393;
 }
+
 .no_goods .cart-image {
   width: 240rpx;
   height: 240rpx;
 }
-
 
 .goods_list {
   box-sizing: border-box;
@@ -28,13 +45,15 @@
 }
 
 .goods_logo {
-  margin-left: 40rpx;
+  margin-left: 38rpx;
   width: 198rpx;
   height: 198rpx;
+  overflow: hidden;
+  border-radius: 10rpx;
 }
 
 .goods_info {
-  width: 445rpx;
+  width: 374rpx;
   font-size: 28rpx;
   font-family: PingFang-SC-Medium;
   color: rgba(51, 51, 51, 1);
@@ -52,15 +71,18 @@
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   overflow: hidden;
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(51, 51, 51, 1);
 }
 
 .goods_info .money {
   position: absolute;
   left: 0;
   bottom: 0;
-  font-size:48rpx;
-  font-family:PingFang-SC-Bold;
-  color:rgba(255,114,114,1);
+  font-size: 48rpx;
+  font-family: PingFang-SC-Bold;
+  color: rgba(255, 114, 114, 1);
 }
 
 .curt {
@@ -70,4 +92,32 @@
   font-size: 26rpx;
   font-family: Helvetica;
   color: rgba(51, 51, 51, 1);
+}
+
+.btn{
+  position: fixed;
+  bottom: 2px;
+  left: 0;
+  width: 100%;
+  padding: 0 30rpx;
+  height: 100rpx;
+  background-color: #fff;
+  box-shadow:1px 0px 2px rgba(0,0,0,0.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.btn_l{
+  
+}
+
+.jinse{
+  font-size:32rpx;
+  font-family:PingFang-SC-Bold;
+  color:rgba(255,255,255,1);
+  line-height: 70rpx;
+  height: 70rpx;
+  width: 240rpx;
+  text-align: center;
+  border-radius:35px;
 }
