--- a/weapp-1/pages/cart/index.wxss
+++ b/weapp-1/pages/cart/index.wxss
@@ -1,3 +1,6 @@
+page{
+  padding-bottom: 124rpx;
+}
 view {
   box-sizing: border-box;
 }
@@ -16,18 +19,31 @@ view {
 .no_goods {
   display: flex;
   align-items: center;
-  /*垂直居中*/
   justify-content: center;
-  /*水平居中*/
-  background-color: #F2f2f2;
+  flex-direction: column;
   color: #939393;
 }
 
-.no_goods .cart-image {
-  width: 240rpx;
-  height: 240rpx;
+.cart-image {
+  margin-top: 300rpx;
+  width: 200rpx;
+  height: 200rpx;
+  border-radius: 50%;
+  margin-bottom: 37rpx;
+  overflow:hidden;
 }
-
+.tiaoxuan{
+  margin-top: 60rpx;
+  width: 240rpx;
+  height: 80rpx;
+  border-radius:5px;
+  box-shadow:7px 0px 10px rgba(77, 77, 77, 0.1);
+  font-size:36rpx;
+  font-family:PingFang-SC-Medium;
+  color:rgba(102, 102, 102, 1);
+  line-height: 80rpx;
+  text-align: center;
+}
 .goods_list {
   box-sizing: border-box;
   padding-left: 22rpx;
@@ -108,9 +124,27 @@ view {
   justify-content: space-between;
 }
 .btn_l{
-  
+  display: flex;
+  align-items: center;
+  justify-content: center; 
 }
-
+.quanxuan{
+  margin-left: 20rpx;
+  font-size:30rpx;
+  font-family:PingFang-SC-Medium;
+  color:rgba(51, 51, 51, 1);
+}
+.heji{
+  padding: 0 20rpx;
+  font-size:24rpx;
+  font-family:PingFang-SC-Medium;
+  color:rgba(153, 153, 153, 1);
+}
+.sum{
+  font-size:36rpx;
+  font-family:PingFang-SC-Bold;
+  color:rgba(255, 114, 114, 1);
+}
 .jinse{
   font-size:32rpx;
   font-family:PingFang-SC-Bold;
@@ -120,4 +154,7 @@ view {
   width: 240rpx;
   text-align: center;
   border-radius:35px;
+}
+.hui{
+  background:rgba(217, 217, 217, 1);
 }
