--- a/weapp-1/pages/user/index.wxml
+++ b/weapp-1/pages/user/index.wxml
@@ -1,4 +1,5 @@
-<view class="btn_box flex_column">
+<view class="get_user" wx:if="{{!bindPhone}}">
+  <view class="btn_box flex_column" >
   <view class="title">
     微信授权
   </view>
@@ -15,6 +16,24 @@
     <button bindtap="logn">拒绝</button>
     <button class="getUserInfo" open-type="getUserInfo" bindgetuserinfo="logn">允许</button>
   </view>
-  
-  
 </view>
+</view>
+
+<form wx:else bindsubmit="submit" >
+<view class="bind_phone">
+  <view class="img">
+    <image src="/images/dunp.png" />
+  </view>
+  <view>
+    为了您的账户安全，请绑定您的手机号
+  </view>
+  <view class="set_phone">
+    <input name="phone" type="number" placeholder="请输入11位手机号码" maxlength="11" />
+    <view class="code jinse">
+      获取验证码
+    </view>
+  </view>
+  <input class="yanzheng" name="code" type="text" placeholder="请输入验证码"/>    
+  <button form-type="submit" class="jinse btn">安全绑定</button>
+</view>
+</form>
