--- a/weapp-1/pages/user/index.wxss
+++ b/weapp-1/pages/user/index.wxss
@@ -1,23 +1,29 @@
-page{
-  background: rgba(0, 0, 0, .4);
-
+page {
+  background-color: #fff;
 }
 
-.btn_box{
+.get_user {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .4);
+}
+
+.btn_box {
   position: fixed;
   left: 50%;
   top: 40%;
   width: 80%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   background: #fff;
   border-radius: 20rpx;
   padding-top: 20rpx;
   overflow: hidden;
 }
 
-.logo{
+.logo {
   margin-top: 20rpx;
-  width:80rpx;
+  width: 80rpx;
   height: 80rpx;
   border-radius: 50%;
   background: #999;
@@ -26,30 +32,109 @@ page{
   text-align: center;
   line-height: 80rpx;
 }
-.btn_txt,.btn_ts{
+
+.btn_txt,
+.btn_ts {
   line-height: 100rpx;
 }
-.btn_btn{
+
+.btn_btn {
   display: flex;
   justify-content: center;
   width: 100%;
   border-top: 1px solid #999;
 }
-.btn_btn>button{
+
+.btn_btn>button {
   flex: auto;
   padding: 0;
   margin: 0;
   border: none;
   background: none;
-  border-radius:0;
-
+  border-radius: 0;
 }
+
 .btn_btn>button:hover {
   background: none;
-  border-radius:0;
-
+  border-radius: 0;
 }
-.getUserInfo{
+
+.getUserInfo {
   border-left: 1px solid #999;
   box-sizing: border-box;
+}
+
+view {
+  box-sizing: border-box;
+}
+
+.bind_phone {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 75rpx;
+}
+
+.img {
+  width: 76rpx;
+  height: 88rpx;
+  margin-top: 74rpx;
+}
+
+.bind_phone>view:nth-of-type(2) {
+  margin-top: 60rpx;
+  font-size: 30rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(51, 51, 51, 1);
+  line-height: 40rpx;
+}
+
+.set_phone {
+  height: 80rpx;
+  border-radius: 40px;
+  overflow: hidden;
+  display: flex;
+  border: 1px solid #f2f2f2;
+  margin-top: 71rpx;
+}
+
+.set_phone>input {
+  height: 100%;
+  line-height: 80rpx;
+  font-size: 28rpx;
+  padding-left: 2em;
+  color: #333;
+}
+
+.code {
+  line-height: 80rpx;
+  font-size: 28rpx;
+  color: #fff;
+  width: 200rpx;
+  text-align: center;
+}
+
+.yanzheng {
+  color: rgba(51, 51, 51, 1);
+  border: 1px solid #f2f2f2;
+  width: 100%;
+  color: #333;
+  padding-left: 2em;
+  box-sizing: border-box;
+  border-radius: 40px;
+  margin-top: 50rpx;
+  height: 80rpx;
+  line-height: 80rpx;
+}
+
+.btn {
+  margin-top: 50rpx;
+  width: 100%;
+  height: 80rpx;
+  line-height: 80rpx;
+  text-align: center;
+  border-radius: 40px;
+  color: #fff;
+  font-size: 32rpx;
 }
