--- a/weapp-1/pages/my/index.wxss
+++ b/weapp-1/pages/my/index.wxss
@@ -73,10 +73,13 @@
   background-size: cover;
 }
 .apply_box,.set_box{
+  width: 25%;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  border-right: 1px solid #f2f2f2;
+  height: 100%;
 }
 .apply_text,.set_text{
   padding-top: 22rpx;
