--- a/weapp-1/pages/shop/order/info/info.wxml
+++ b/weapp-1/pages/shop/order/info/info.wxml
@@ -28,7 +28,7 @@
       凭证
     </view>
     <view class="img">
-      <view class="is_img" wx:for="{{imgs}}" wx:key="i" catchtap="preview" data-src="{{item}}">
+      <view class="is_img" wx:for="{{2}}" wx:key="i" >
         <image src="/images/goods.png"  />
       </view>
     </view>
@@ -40,7 +40,7 @@
       </view>
       <text>联系客服</text>
     </view>
-    <button wx:if="{{1}}" class="submit_btn jinse" form-type="submit"  hover-class="defaultTap">提交</button>
+    <button wx:if="{{1}}" class="submit_btn jinse" form-type="submit" >取消退款</button>
   </view>
 </view>
 </form>
