--- a/weapp-1/pages/index/result/result.wxss
+++ b/weapp-1/pages/index/result/result.wxss
@@ -60,3 +60,17 @@
 .opt{
   color:rgba(173, 155, 106, 1);
 }
+.filtrate_list{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color:rgba(0, 0, 0, .7);
+  padding-left: 80rpx;
+}
+.options{
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
