--- a/weapp-1/pages/index/result/result.wxss
+++ b/weapp-1/pages/index/result/result.wxss
@@ -68,9 +68,18 @@
   left: 0;
   background-color:rgba(0, 0, 0, .7);
   padding-left: 80rpx;
+  z-index: 9;
 }
 .options{
   width: 100%;
   height: 100%;
   background-color: #fff;
+  padding-left: 20rpx;
+}
+.h1{
+  height: 93rpx;
+  line-height: 93rpx;
+  font-size:30rpx;
+  font-family:PingFang-SC-Medium;
+  color:rgba(102, 102, 102, 1);
 }
