--- a/weapp-1/pages/index/result/result.wxml
+++ b/weapp-1/pages/index/result/result.wxml
@@ -1,3 +1,4 @@
+
 <import  src="/components/goodsList/list.wxml" />
 
 <view class="title">
@@ -19,7 +20,7 @@
     <view class="fil_info">
       上新
     </view>
-    <view class="fil_info">
+    <view class="fil_info" bindtap="filtrate">
       筛选
     </view>
   </view>
@@ -27,31 +28,60 @@
     
 </view>
 
-<view class="filtrate_list">
+<view class="filtrate_list" animation="{{animation}}">
   <view class="options">
     <view class="opt_info">
       <view class="h1">
         品牌
       </view>
+      <view class="opt_list">
+        <view  wx:for="{{pinpai}}" wx:key="index" class="opt_goods {{item.is?'active':''}}" data-cls="pinpai"  data-id="{{index}}" bindtap="ispl">
+          {{item.name}}
+        </view>
+      </view>
     </view>
     <view class="opt_info">
       <view class="h1">
         品类
+      </view>
+       <view class="opt_list">
+        <view  wx:for="{{pinlei}}" wx:key="index" class="opt_goods {{item.is?'active':''}}" data-cls="pinlei"  data-id="{{index}}" bindtap="ispl">
+          {{item.name}}
+        </view>
       </view>
     </view>
     <view class="opt_info">
       <view class="h1">
         价格
       </view>
+      <view class="jg_box">
+        <view class='zdj'>
+          <input type="number" bindinput="zdj" placeholder="最低价"  />
+        </view>
+        <view class='xian'></view>
+        <view class='zgj'>
+          <input type="number" bindinput="zgj" placeholder="最高价"  />
+        </view>
+      </view>
     </view>
     <view class="opt_info">
       <view class="h1">
-        品类
+        新旧
+      </view>
+       <view class="opt_list">
+        <view  wx:for="{{xinjiu}}" wx:key="index" class="opt_goods {{item.is?'active':''}}" data-cls="xinjiu"  data-id="{{index}}" bindtap="ispl">
+          {{item.name}}
+        </view>
       </view>
     </view>
     <view class="opt_info">
       <view class="h1">
         降价/分期
+      </view>
+      <view class="opt_list">
+        <view  wx:for="{{isfq}}" wx:key="index" class="opt_goods {{item.is?'active':''}}" data-cls="isfq"  data-id="{{index}}" bindtap="ispl">
+          {{item.name}}
+        </view>
       </view>
     </view>
   </view>
