--- a/weapp-1/pages/index/result/result.wxss
+++ b/weapp-1/pages/index/result/result.wxss
@@ -1,5 +1,4 @@
 @import '/components/goodsList/list.wxss';
-
 .title {
   width: 100%;
   height: 88rpx;
@@ -35,12 +34,11 @@
   z-index: 9;
 }
 
-.filtrate{
+.filtrate {
   width: 100%;
-  
 }
 
-.fil_title{
+.fil_title {
   margin-top: 2px;
   width: 100%;
   height: 80rpx;
@@ -50,36 +48,87 @@
   text-align: center;
   background: #fff;
 }
-.fil_info{
+
+.fil_info {
   flex: auto;
-  font-size:28rpx;
-  font-family:PingFang-SC-Medium;
-  color:rgba(153, 153, 153, 1);
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(153, 153, 153, 1);
 }
 
-.opt{
-  color:rgba(173, 155, 106, 1);
+.opt {
+  color: rgba(173, 155, 106, 1);
 }
-.filtrate_list{
+
+.filtrate_list {
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
   position: fixed;
   top: 0;
-  left: 0;
-  background-color:rgba(0, 0, 0, .7);
+  left: 100%;
+  background-color: rgba(0, 0, 0, .7);
   padding-left: 80rpx;
   z-index: 9;
 }
-.options{
+.filtrate_list view{
+  box-sizing: border-box;
+}
+.options {
   width: 100%;
   height: 100%;
   background-color: #fff;
   padding-left: 20rpx;
 }
-.h1{
+
+.h1 {
   height: 93rpx;
   line-height: 93rpx;
-  font-size:30rpx;
-  font-family:PingFang-SC-Medium;
-  color:rgba(102, 102, 102, 1);
+  font-size: 30rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(102, 102, 102, 1);
+}
+.opt_list{
+  display: flex;
+  flex-wrap: wrap;
+}
+.opt_goods {
+  width: 145rpx;
+  height: 56rpx;
+  background: rgba(238, 238, 238, 1);
+  border-radius: 6px;
+  font-size: 24rpx;
+  color: rgba(102, 102, 102, 1);
+  line-height: 56rpx;
+  text-align: center;
+  margin-right: 17rpx;
+  margin-bottom: 20rpx;
+}
+.opt_goods.active{
+  background-color: #C0B48E;
+  color: #fff;
+}
+.jg_box{
+  width: 100%;
+  display: flex;
+  height: 56rpx;
+  justify-content: space-between;
+  padding-right: 20rpx;
+  align-items: center;
+  box-sizing:border-box;
+}
+.xian{
+  width: 74rpx;
+  height: 1px;
+  background-color: #999999;
+}
+.zdj,.zgj{
+  width:235rpx;
+  height:56rpx;  
+  background: rgba(238, 238, 238, 1);
+  border-radius:6px;
+}
+.jg_box input{
+  height: 100%;
+  text-align: center;
 }
