--- a/weapp-1/pages/index/result/result.wxss
+++ b/weapp-1/pages/index/result/result.wxss
@@ -71,9 +71,11 @@
   padding-left: 80rpx;
   z-index: 9;
 }
-.filtrate_list view{
+
+.filtrate_list view {
   box-sizing: border-box;
 }
+
 .options {
   width: 100%;
   height: 100%;
@@ -88,10 +90,12 @@
   font-family: PingFang-SC-Medium;
   color: rgba(102, 102, 102, 1);
 }
-.opt_list{
+
+.opt_list {
   display: flex;
   flex-wrap: wrap;
 }
+
 .opt_goods {
   width: 145rpx;
   height: 56rpx;
@@ -104,31 +108,67 @@
   margin-right: 17rpx;
   margin-bottom: 20rpx;
 }
-.opt_goods.active{
+
+.opt_goods.active {
   background-color: #C0B48E;
   color: #fff;
 }
-.jg_box{
+
+.jg_box {
   width: 100%;
   display: flex;
   height: 56rpx;
   justify-content: space-between;
   padding-right: 20rpx;
   align-items: center;
-  box-sizing:border-box;
+  box-sizing: border-box;
 }
-.xian{
+
+.xian {
   width: 74rpx;
   height: 1px;
   background-color: #999999;
 }
-.zdj,.zgj{
-  width:235rpx;
-  height:56rpx;  
+
+.zdj,
+.zgj {
+  width: 235rpx;
+  height: 56rpx;
   background: rgba(238, 238, 238, 1);
-  border-radius:6px;
+  border-radius: 6px;
 }
-.jg_box input{
+
+.jg_box input {
   height: 100%;
   text-align: center;
+}
+
+.btn {
+  width: 600rpx;
+  height: 70rpx;
+  border-radius: 35px;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  margin-top: 139rpx;
+  border: 1px solid #ccc;
+  text-align: center;
+  overflow: hidden;
+}
+
+.btn view {
+  flex: auto;
+  line-height: 70rpx;
+  font-size: 32rpx;
+}
+
+.btn_l {
+  font-family: PingFang-SC-Medium;
+  color: rgba(102, 102, 102, 1);
+}
+
+.btn_r {
+  background: rgba(192, 180, 142, 1);
+  color:rgba(255,255,255,1);
+  font-family: PingFang-SC-Medium;
 }
