--- a/pages/my/info/name/name.wxml
+++ b/pages/my/info/name/name.wxml
@@ -1,5 +1,5 @@
 <view class="set_name">
-  <input type="text" placeholder="请填写新昵称,12字内" auto-focus name='name' bindinput="getName"  />
+<input type="text" placeholder="请填写新昵称,12字内" auto-focus name='name' bindinput="getName" value="{{userInfo.nickname}}" />
 </view>
 <view class="wanc jinse" bindtap="submit">
   完成
