--- a/pages/my/index.wxml
+++ b/pages/my/index.wxml
@@ -5,15 +5,15 @@
     <text class="userinfo-nickname">{{userInfo.nickname}}</text>
     <view class="purse">
       <view class="purse_ye" bindtap="toqianbao">
-        <view>0.00</view>
+        <view>{{userInfo.wallet_balance}}</view>
         <view class="text_b">余额</view>
       </view>
       <view class="purse_yhq" bindtap="toyhq">
-        <view>5</view>
+        <view>{{userInfo.coupon_num}}</view>
         <view class="text_b">优惠券</view>
       </view>
       <view class="purse_hb" bindtap="tohongb">
-        <view>200</view>
+        <view>{{userInfo.redpack_num}}</view>
         <view class="text_b">红包</view>
       </view>
     </view>
@@ -23,7 +23,7 @@
   <view class="apply" bindtap="todind">
     <view class="apply_box">
       <view class="apply_bac">
-
+       <image src="/images/my/geren_daifukuan@3x.png" />
       </view>
       <view class="apply_text">
         待付款
@@ -31,7 +31,7 @@
     </view>
     <view class="apply_box">
       <view class="apply_bac">
-
+<image src="/images/my/geren_daifahuo@3x.png" />
       </view>
       <view class="apply_text">
         待发货
@@ -39,7 +39,7 @@
     </view>
     <view class="apply_box">
       <view class="apply_bac">
-
+<image src="/images/my/geren_daishouhuo@3x.png" />
       </view>
       <view class="apply_text">
         待收货
@@ -47,7 +47,7 @@
     </view>
     <view class="apply_box">
       <view class="apply_bac">
-
+<image src="/images/my/geren_tuikuan@3x.png" />
       </view>
       <view class="apply_text">
         退款/售后
@@ -55,7 +55,7 @@
     </view>
     <view class="apply_box">
       <view class="apply_bac">
-
+<image src="/images/my/geren_quanbu@3x.png" />
       </view>
       <view class="apply_text">
         全部
@@ -66,7 +66,7 @@
   <view class="my_set">
     <view class="set_box">
       <view class="set_bac">
-
+<image src="/images/my/geren_dizhi@3x.png" />
       </view>
       <view class="set_text" bindtap="todizhi">
         我的地址
@@ -74,6 +74,7 @@
     </view>
     <view class="set_box">
       <view class="set_bac">
+<image src="/images/my/geren_yijian@3x.png" />
 
       </view>
       <view class="set_text" bindtap="toyijian">
@@ -82,7 +83,7 @@
     </view>
     <view class="set_box">
       <view class="set_bac">
-
+<image src="/images/my/geren_yaoqing@3x.png" />
       </view>
       <view class="set_text">
         邀请好友
@@ -90,7 +91,7 @@
     </view>
     <view class="set_box" bindtap="toInfo">
       <view class="set_bac">
-
+<image src="/images/my/geren_shezhi@3x.png" />
       </view>
       <view class="set_text">
         设置
